[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/player.png" type="Texture" id=2]
[ext_resource path="res://workbench/crafting_window.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/crafting_hud.gd" type="Script" id=4]
[ext_resource path="res://assets/materials/block3.png" type="Texture" id=5]
[ext_resource path="res://assets/materials/block1.png" type="Texture" id=6]
[ext_resource path="res://assets/materials/block2.png" type="Texture" id=7]
[ext_resource path="res://crafting_hud/material_display.gd" type="Script" id=8]
[ext_resource path="res://crafting_hud/disposal.gd" type="Script" id=9]
[ext_resource path="res://crafting_hud/crafted_material_display.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.08048, 13.4562 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.61202 )
shape = SubResource( 1 )

[node name="crafting_hud" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="crafting_area" type="Control" parent="crafting_hud"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crafting_table" parent="crafting_hud/crafting_area" instance=ExtResource( 3 )]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.181
margin_top = -26.4389
margin_right = -127.181
margin_bottom = -26.4389
container_path = NodePath("../material_supply")

[node name="craft_button" type="Button" parent="crafting_hud/crafting_area"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.681
margin_top = -34.2825
margin_right = -98.681
margin_bottom = -14.2825
text = "Craft!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disposal" type="Panel" parent="crafting_hud/crafting_area" groups=[
"disposal",
]]
anchor_left = 0.339
anchor_top = 0.824
anchor_right = 0.663
anchor_bottom = 0.946
margin_left = -2.77188
margin_top = 0.0160065
margin_right = -6.18788
margin_bottom = 0.664001
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="crafting_hud/crafting_area/disposal"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Disposal"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crafted_material_display" type="Panel" parent="crafting_hud/crafting_area"]
anchor_left = 0.342
anchor_top = 0.331
anchor_right = 0.659
anchor_bottom = 0.792
margin_left = -3.92389
margin_top = 2.50399
margin_right = -4.6519
margin_bottom = -0.0720062
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
disposal_path = NodePath("../disposal")
material_supply_path = NodePath("../material_supply")
crafting_path = NodePath("../crafting_table")

[node name="Label" type="Label" parent="crafting_hud/crafting_area/crafted_material_display"]
anchor_left = 0.317
anchor_top = 0.768
anchor_right = 0.648
anchor_bottom = 0.913
margin_left = 0.0288391
margin_top = 0.0473328
margin_right = -0.022171
margin_bottom = -0.0176697
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material_supply" type="Control" parent="crafting_hud/crafting_area"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material_container" type="HBoxContainer" parent="crafting_hud/crafting_area/material_supply"]
margin_left = 21.1777
margin_top = 40.8271
margin_right = 107.178
margin_bottom = 56.8271
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="display1" type="VBoxContainer" parent="crafting_hud/crafting_area/material_supply/material_container"]
margin_right = 16.0
margin_bottom = 34.0

[node name="material" type="TextureRect" parent="crafting_hud/crafting_area/material_supply/material_container/display1" groups=[
"material",
]]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 6 )
script = ExtResource( 8 )
crafting_table = NodePath("../../../../crafting_table")
disposal_path = NodePath("../../../../disposal")
material_supply_path = NodePath("../../..")

[node name="material_count" type="Label" parent="crafting_hud/crafting_area/material_supply/material_container/display1"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 34.0
text = "3"
align = 1

[node name="display2" type="VBoxContainer" parent="crafting_hud/crafting_area/material_supply/material_container"]
margin_left = 35.0
margin_right = 51.0
margin_bottom = 34.0

[node name="material1" type="TextureRect" parent="crafting_hud/crafting_area/material_supply/material_container/display2" groups=[
"material1",
]]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 7 )
script = ExtResource( 8 )
crafting_table = NodePath("../../../../crafting_table")
disposal_path = NodePath("../../../../disposal")
material_supply_path = NodePath("../../..")

[node name="material_count" type="Label" parent="crafting_hud/crafting_area/material_supply/material_container/display2"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 34.0
text = "3"
align = 1

[node name="display3" type="VBoxContainer" parent="crafting_hud/crafting_area/material_supply/material_container"]
margin_left = 70.0
margin_right = 86.0
margin_bottom = 34.0

[node name="material2" type="TextureRect" parent="crafting_hud/crafting_area/material_supply/material_container/display3" groups=[
"material2",
]]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )
script = ExtResource( 8 )
crafting_table = NodePath("../../../../crafting_table")
disposal_path = NodePath("../../../../disposal")
material_supply_path = NodePath("../../..")

[node name="material_count" type="Label" parent="crafting_hud/crafting_area/material_supply/material_container/display3"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 34.0
text = "3"
align = 1

[node name="interaction_cast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="item_crafted" from="crafting_hud/crafting_area/crafting_table" to="crafting_hud" method="_on_crafting_table_item_crafted"]
[connection signal="pressed" from="crafting_hud/crafting_area/craft_button" to="crafting_hud" method="_on_craft_button_pressed"]
[connection signal="gui_input" from="crafting_hud/crafting_area/material_supply/material_container/display1/material" to="crafting_hud/crafting_area/material_supply/material_container/display1/material" method="_on_material_display_gui_input"]
[connection signal="gui_input" from="crafting_hud/crafting_area/material_supply/material_container/display2/material1" to="crafting_hud/crafting_area/material_supply/material_container/display2/material1" method="_on_material_display_gui_input"]
[connection signal="gui_input" from="crafting_hud/crafting_area/material_supply/material_container/display3/material2" to="crafting_hud/crafting_area/material_supply/material_container/display3/material2" method="_on_material_display_gui_input"]
